<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddMessageActivity">

    <include
        layout="@layout/drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/titleMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title" />

    <EditText
        android:id="@+id/textMessageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text" />

    <Button
        android:id="@+id/encodeMessageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encode_message" />

    <TextView
        android:id="@+id/codeMessageTextView"
        style="@style/TextViewMainAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:singleLine="true"/>

</LinearLayout>